# tflite_openvino_delegate

./: README.md
tensorflow/lite/delegates/openvino/: BUILD  BUILD.bazel  openvino.bzl  openvino_delegate.cc  openvino_delegate.h  openvino_delegate_adapter.cc  openvino_delegate_builder_test.cc  openvino_delegate_core.cc  openvino_delegate_core.h  openvino_delegate_core_test.cc  openvino_delegate_external.cc  openvino_delegate_external_test.cc  openvino_delegate_kernel.cc  openvino_delegate_kernel.h  openvino_delegate_test.cc  openvino_graph_builder.cc  openvino_graph_builder.h  openvino_graph_builder_test.cc
tensorflow/lite/delegates/openvino/openvino/: 0001-ww15.patch  BUILD  openvino_delegate.cc  openvino_delegate.h  openvino_delegate_adapter.cc  openvino_delegate_builder_test.cc  openvino_delegate_core.cc  openvino_delegate_core.h  openvino_delegate_core_test.cc  openvino_delegate_external.cc  openvino_delegate_external_test.cc  openvino_delegate_kernel.cc  openvino_delegate_kernel.h  openvino_delegate_test.cc  openvino_graph_builder.cc  openvino_graph_builder.h  openvino_graph_builder_test.cc  stable_delegate_settings.json
tensorflow/lite/delegates/openvino/openvino/operations/: openvino_node_manager.h  operations_base.h
tensorflow/lite/delegates/openvino/openvino/operations/include/: add.h  average_pool_2d.h  concat.h  conv2d.h  depthwise_conv2d.h  dequantize.h  hardswish.h  logistic.h  maxpool2d.h  mean.h  mul.h  relu.h  relu6.h  reshape.h  resize_bilinear.h  softmax.h  tanh.h  transpose_conv.h
tensorflow/lite/delegates/openvino/openvino/operations/src/: add.cc  average_pool_2d.cc  concat.cc  conv2d.cc  depthwise_conv2d.cc  dequantize.cc  hardswish.cc  logistic.cc  maxpool2d.cc  mean.cc  mul.cc  relu.cc  relu6.cc  reshape.cc  resize_bilinear.cc  softmax.cc  tanh.cc  transpose_conv.cc
tensorflow/lite/delegates/openvino/operations/: BUILD  BUILD.bazel  openvino_node_manager.h  operations_base.h
tensorflow/lite/delegates/openvino/operations/include/: add.h  average_pool_2d.h  concat.h  conv2d.h  depthwise_conv2d.h  dequantize.h  hardswish.h  logistic.h  maxpool2d.h  mean.h  mul.h  relu.h  relu6.h  reshape.h  resize_bilinear.h  softmax.h  tanh.h  transpose_conv.h
tensorflow/lite/delegates/openvino/operations/src/: add.cc  average_pool_2d.cc  concat.cc  conv2d.cc  depthwise_conv2d.cc  dequantize.cc  hardswish.cc  logistic.cc  maxpool2d.cc  mean.cc  mul.cc  relu.cc  relu6.cc  reshape.cc  resize_bilinear.cc  softmax.cc  tanh.cc  transpose_conv.cc
