load("@org_tensorflow//tensorflow/lite:build_def.bzl", "tflite_copts")
load("@org_tensorflow//tensorflow/lite/core/shims:cc_library_with_tflite.bzl", "cc_library_with_tflite")

package(
    default_visibility = [
        "//visibility:public",
    ],
    licenses = ["notice"],
)

cc_library_with_tflite(
    name = "operations_base",
    srcs = [
        "src/add.cc",
        "src/average_pool_2d.cc",
        "src/concat.cc",
        "src/conv2d.cc",
        "src/depthwise_conv2d.cc",
        "src/dequantize.cc",
        "src/hardswish.cc",
        "src/logistic.cc",
        "src/maxpool2d.cc",
        "src/mean.cc",
        "src/mul.cc",
        "src/relu.cc",
        "src/relu6.cc",
        "src/reshape.cc",
        "src/resize_bilinear.cc",
        "src/softmax.cc",
        "src/tanh.cc",
        "src/transpose_conv.cc",
    ],
    hdrs = [
        "include/add.h",
        "include/average_pool_2d.h",
        "include/concat.h",
        "include/conv2d.h",
        "include/depthwise_conv2d.h",
        "include/dequantize.h",
        "include/hardswish.h",
        "include/logistic.h",
        "include/maxpool2d.h",
        "include/mean.h",
        "include/mul.h",
        "include/relu.h",
        "include/relu6.h",
        "include/reshape.h",
        "include/resize_bilinear.h",
        "include/softmax.h",
        "include/tanh.h",
        "include/transpose_conv.h",
        "openvino_node_manager.h",
        "operations_base.h",
    ],
    copts = tflite_copts() + ["-Wno-delete-non-abstract-non-virtual-dtor"],
    tags = [
        "manual",
        "nobuilder",
    ],
    visibility = ["//delegate/intel_openvino:__subpackages__"],
    deps = [
        "@intel_openvino//:openvino",
        "@org_tensorflow//tensorflow/lite:kernel_api",
        "@org_tensorflow//tensorflow/lite:util",
        "@org_tensorflow//tensorflow/lite/acceleration/configuration/c:stable_delegate",
        "@org_tensorflow//tensorflow/lite/c:c_api",
        "@org_tensorflow//tensorflow/lite/c:c_api_experimental",
        "@org_tensorflow//tensorflow/lite/c:c_api_types",
        "@org_tensorflow//tensorflow/lite/c:common",
        "@org_tensorflow//tensorflow/lite/delegates/utils:simple_opaque_delegate",
        "@org_tensorflow//tensorflow/lite/kernels:kernel_util",
        "@org_tensorflow//tensorflow/lite/kernels:padding",
        "@org_tensorflow//tensorflow/lite/kernels/internal:optimized_base",
        "@org_tensorflow//tensorflow/lite/kernels/internal:tensor",
        "@org_tensorflow//tensorflow/lite/kernels/internal:types",
        "@org_tensorflow//tensorflow/lite/tools:logging",
    ],
)
